Turned messages into a class with reactions.

--- a/ChatSample/ChatSample/wwwroot/index.html
+++ b/ChatSample/ChatSample/wwwroot/index.html
@@ -37,10 +37,11 @@
                                 .build();
 
             // Create a function that the hub can call to broadcast messages.
-            connection.on('broadcastMessage', function (name, message) {
+            connection.on('broadcastMessage', function (message) {
+                console.log(message);
                 // Html encode display name and message.
-                var encodedName = name;
-                var encodedMsg = message;
+                var encodedName = message.creator;
+                var encodedMsg = message.text;
                 // Add the message to the page.
                 var liElement = document.createElement('li');
                 liElement.innerHTML = '<strong>' + encodedName + '</strong>:&nbsp;&nbsp;' + encodedMsg;
