--- a/ChatSample/ChatSample/wwwroot/index.html
+++ b/ChatSample/ChatSample/wwwroot/index.html
@@ -28,6 +28,10 @@
 
             // Get the user name and store it to prepend to messages.
             var name = prompt('Enter your name:', '');
+            while (name.length > 15 || name.length < 3 || !(/^[a-zA-Z]*$/.test(name))) {
+                alert("Invalid name try again!");
+                name = prompt('Enter your name:', '');
+            }
             // Set initial focus to message input box.
             messageInput.focus();
 
@@ -41,6 +45,7 @@
                 // Html encode display name and message.
                 var encodedName = name;
                 var encodedMsg = message;
+                         
                 // Add the message to the page.
                 var liElement = document.createElement('li');
                 liElement.innerHTML = '<strong>' + encodedName + '</strong>:&nbsp;&nbsp;' + encodedMsg;
@@ -52,6 +57,11 @@
                 .then(function () {
                     console.log('connection started');
                     document.getElementById('sendmessage').addEventListener('click', function (event) {
+                        //stops injections in the message
+                        if (!(/^[a-zA-Z]*$/.test(messageInput.value))) {
+                            alert("Invalid msg try again!");
+                            return;
+                        }
                         // Call the Send method on the hub.
                         connection.invoke('send', name, messageInput.value);
 
