--- a/ChatSample/ChatSample/wwwroot/index.html
+++ b/ChatSample/ChatSample/wwwroot/index.html
@@ -1,112 +1,118 @@
 ﻿<!DOCTYPE html>
+ <!-- Specifies the document type to be HTML5 -->
 <html>
 
 <head>
-    <title>SignalR Simple Chat</title>
+    <title>SignalR Simple Chat</title> <!-- Sets the title of the page shown in the browser tab -->
     <style type="text/css">
+        <!--
+
+        Beginning of internal CSS -->
         .container {
-            background-color: #99CCFF;
-            border: thick solid #808080;
-            padding: 20px;
-            margin: 20px;
+            background-color: #99CCFF; /* Sets the background color of the container */
+            border: thick solid #808080; /* Sets the border thickness, style, and color */
+            padding: 20px; /* Adds padding inside the container */
+            margin: 20px; /* Adds margin outside the container */
         }
 
         .emoji-reaction {
-            display: none;
-            cursor: pointer;
+            display: none; /* Hides the emoji-reaction by default */
+            cursor: pointer; /* Changes the cursor to a hand when hovered over the emoji-reaction */
         }
 
         .emoji-wrapper span {
-            display: none;
+            display: none; /* Hides the emojis inside the emoji-wrapper by default */
         }
 
         .emoji-wrapper.shown span {
-            display: inline-block;
-            margin: 0 5px;
+            display: inline-block; /* Shows the emojis inside the emoji-wrapper when the "shown" class is added */
+            margin: 0 5px; /* Adds margin to the left and right of each emoji */
         }
 
         .plus-sign {
-            cursor: pointer;
-            font-size: 20px; /* Adjust as needed */
-            font-weight: bold;
-            margin-left: 5px;
+            cursor: pointer; /* Changes the cursor to a hand when hovered over the plus-sign */
+            font-size: 20px; /* Sets the font size of the plus sign */
+            font-weight: bold; /* Makes the plus sign bold */
+            margin-left: 5px; /* Adds margin to the left of the plus sign */
         }
-    </style>
+    </style> <!-- End of internal CSS -->
 </head>
 
 <body>
     <div class="container">
-        <input type="text" id="message" />
-        <input type="button" id="sendmessage" value="Send" />
-        <ul id="discussion"></ul>
+        <!-- Main container div -->
+        <input type="text" id="message" /> <!-- Input field for users to type their message -->
+        <input type="button" id="sendmessage" value="Send" /> <!-- Button to send the message -->
+        <ul id="discussion"></ul> <!-- Unordered list to display chat messages -->
     </div>
-    <script type="text/javascript" src="lib/signalr.min.js"></script>
+    <script type="text/javascript" src="lib/signalr.min.js"></script> <!-- Includes the SignalR library -->
     <script type="text/javascript">
-        document.addEventListener('DOMContentLoaded', function () {
-            var messageInput = document.getElementById('message');
+ <!-- Beginning of internal JavaScript-- >
+                document.addEventListener('DOMContentLoaded', function () { // Waits for the document to be fully loaded
+                    var messageInput = document.getElementById('message'); // Gets the message input element
 
-            var name = prompt('Enter your name:', '');
-            messageInput.focus();
+                    var name = prompt('Enter your name:', ''); // Prompts user for their name
+                    messageInput.focus(); // Puts focus on the message input field
 
-            var connection = new signalR.HubConnectionBuilder()
-                .withUrl('/chat')
-                .build();
+                    var connection = new signalR.HubConnectionBuilder() // Initializes a new SignalR connection
+                        .withUrl('/chat') // Specifies the endpoint for the SignalR hub
+                        .build();
 
-            connection.on('broadcastMessage', function (name, message, messageId) {
-                var encodedName = name;
-                var encodedMsg = message;
+                    connection.on('broadcastMessage', function (name, message, messageid) { // Listens for "broadcastMessage" events from the server
+                        var encodedName = name; // Stores the sender's name
+                        var encodedMsg = message; // Stores the received message
 
-                var liElement = document.createElement('li');
-                liElement.innerHTML = '<strong>' + encodedName + '</strong>:&nbsp;&nbsp;' + encodedMsg;
+                        var liElement = document.createElement('li'); // Creates a new list item element
+                        liElement.innerHTML = '<strong>' + encodedName + '</strong>:&nbsp;&nbsp;' + encodedMsg; // Sets the inner HTML of the list item
 
-                var plusSign = document.createElement('span');
-                plusSign.textContent = '+';
-                plusSign.className = 'plus-sign';
+                        var plusSign = document.createElement('span'); // Creates a new span element for the plus sign
+                        plusSign.textContent = '+'; // Sets the text content of the span to a plus sign
+                        plusSign.className = 'plus-sign'; // Adds the 'plus-sign' class to the span
 
-                var emojiWrapper = document.createElement('div');
-                emojiWrapper.className = 'emoji-wrapper';
+                        var emojiWrapper = document.createElement('div'); // Creates a new div for the emoji wrapper
+                        emojiWrapper.className = 'emoji-wrapper'; // Adds the 'emoji-wrapper' class to the div
 
-                var emojis = ['&#128512;', '&#127789;', '&#128578;'];
-                emojis.forEach(function (emojiCode) {
-                    var emoji = document.createElement('span');
-                    emoji.innerHTML = emojiCode;
-                    emoji.className = 'emoji-reaction';
-                    emoji.addEventListener('click', function () {
-                        emojiWrapper.innerHTML = emojiCode;
-                        plusSign.style.display = 'none';
+                        var emojis = ['&#128512;', '&#127789;', '&#128578;']; // Array of emoji HTML entities
+                        emojis.forEach(function (emojiCode) { // Loops through each emoji
+                            var emoji = document.createElement('span'); // Creates a new span for each emoji
+                            emoji.innerHTML = emojiCode; // Sets the emoji HTML entity as the inner HTML of the span
+                            emoji.className = 'emoji-reaction'; // Adds the 'emoji-reaction' class to the span
+                            emoji.addEventListener('click', function () { // Adds a click event listener to the emoji span
+                                emojiWrapper.innerHTML = emojiCode; // Sets the clicked emoji as the only emoji in the emoji wrapper
+                                plusSign.style.display = 'none'; // Hides the plus sign
+                            });
+                            emojiWrapper.appendChild(emoji); // Appends the emoji span to the emoji wrapper
+                        });
+
+                        plusSign.addEventListener('click', function () { // Adds a click event listener to the plus sign
+                            emojiWrapper.classList.add('shown'); // Adds the 'shown' class to the emoji wrapper, making the emojis visible
+                        });
+
+                        liElement.appendChild(plusSign); // Appends the plus sign to the list item
+                        liElement.appendChild(emojiWrapper); // Appends the emoji wrapper to the list item
+                        document.getElementById('discussion').appendChild(liElement); // Appends the list item to the discussion list
                     });
-                    emojiWrapper.appendChild(emoji);
-                });
 
-                plusSign.addEventListener('click', function () {
-                    emojiWrapper.classList.add('shown');
-                });
-
-                liElement.appendChild(plusSign);
-                liElement.appendChild(emojiWrapper);
-                document.getElementById('discussion').appendChild(liElement);
-            });
-
-            connection.on('updateReactions', function (messageId, emoji, count) {
-                // This method will be called whenever a new reaction is added.
-                // You can use the messageId, emoji, and count to update the reactions on the frontend.
-            });
-
-            connection.start()
-                .then(function () {
-                    console.log('connection started');
-                    document.getElementById('sendmessage').addEventListener('click', function (event) {
-                        connection.invoke('SendMessage', name, messageInput.value);
-                        messageInput.value = '';
-                        messageInput.focus();
-                        event.preventDefault();
+                    connection.on('updateReactions', function (messageId, emoji, count) {
+                        // This method will be called whenever a new reaction is added.
+                        // You can use the messageId, emoji, and count to update the reactions on the frontend.
                     });
-                })
-                .catch(error => {
-                    console.error(error.message);
+
+                    connection.start() // Starts the SignalR connection
+                        .then(function () {
+                            console.log('connection started'); // Logs to the console when the connection has started
+                            document.getElementById('sendmessage').addEventListener('click', function (event) { // Adds a click event listener to the send button
+                                connection.invoke('SendMessage', name, messageInput.value); // Sends a message to the server using the 'SendMessage' method
+                                messageInput.value = ''; // Clears the message input field
+                                messageInput.focus(); // Puts focus back on the message input field
+                                event.preventDefault(); // Prevents the default behavior of the click event
+                            });
+                        })
+                        .catch(error => {
+                            console.error(error.message); // Logs any errors that occur when trying to start the connection
+                        });
                 });
-        });
-    </script>
+    </script> <!-- End of internal JavaScript -->
 </body>
 
 </html>
