--- a/ChatSample/ChatSample/wwwroot/index.html
+++ b/ChatSample/ChatSample/wwwroot/index.html
@@ -35,18 +35,38 @@
             var connection = new signalR.HubConnectionBuilder()
                                 .withUrl('/chat')
                                 .build();
-
+                                
             // Create a function that the hub can call to broadcast messages.
             connection.on('broadcastMessage', function (message) {
-                console.log(message);
                 // Html encode display name and message.
                 var encodedName = message.creator;
                 var encodedMsg = message.text;
                 // Add the message to the page.
                 var liElement = document.createElement('li');
                 liElement.innerHTML = '<strong>' + encodedName + '</strong>:&nbsp;&nbsp;' + encodedMsg;
+
+                //Emojis
+                var emojiWrapper = document.createElement('div');
+                var emojis = ['&#128512;', '&#127789;', '&#128578;']; // Add more emojis if you want.
+                emojis.forEach(function (emojiCode) {
+                    var emoji = document.createElement('span');
+                    emoji.innerHTML = emojiCode;
+                    emoji.style.cursor = 'pointer';
+                    emoji.addEventListener('click', function () {
+                        emojiWrapper.innerHTML = emojiCode; // Show only the clicked emoji.
+                        connection.invoke('AddEmojiCount', name, emojiCode, message);
+                    });
+                    emojiWrapper.appendChild(emoji);
+                });
+
+                liElement.appendChild(emojiWrapper);
                 document.getElementById('discussion').appendChild(liElement);
             });
+
+            //connection.on('UpdateMessageReactions', function (messageID, messageReactions) {
+
+            //};
+
 
             // Transport fallback functionality is now built into start.
             connection.start()
