Found JS src for DOM Sanitizing

--- a/ChatSample/ChatSample/wwwroot/index.html
+++ b/ChatSample/ChatSample/wwwroot/index.html
@@ -29,7 +29,8 @@
             // Get the user name and store it to prepend to messages.
             var name = prompt('Enter your name:', '');
                         
-            //stops injections in the name
+            //stops injections in the name look 
+            //look into github.com/cure53/DOMPurify
             while (name.length > 15 || name.length < 3 || !(/^[^<>]+$/.test(name))) {
                 alert("Invalid name, must be between 15 and 3 characters long, no < or > allowed, try again!");
                 name = prompt('Enter your name:', '');
