--- a/ChatSample/ChatSample/wwwroot/index.html
+++ b/ChatSample/ChatSample/wwwroot/index.html
@@ -27,7 +27,12 @@
             var messageInput = document.getElementById('message');
 
             // Get the user name and store it to prepend to messages.
-            var name = prompt('Enter your name:', '');
+            var name = "";
+            while (name == "")
+            {
+                name = prompt('Enter your name:', '').trim();
+            }
+
             // Set initial focus to message input box.
             messageInput.focus();
 
