--- a/ChatSample/ChatSample/wwwroot/index.html
+++ b/ChatSample/ChatSample/wwwroot/index.html
@@ -3,7 +3,9 @@
 
 <head>
     <title>SignalR Simple Chat</title>
+    <!-- Styling for the chat application -->
     <style type="text/css">
+        /* Styling for the main chat container */
         .container {
             background-color: #99CCFF;
             border: thick solid #808080;
@@ -11,20 +13,24 @@
             margin: 20px;
         }
 
+        /* Styling for the emoji reactions that users can click on */
         .emoji-reaction {
             display: inline-block;
             cursor: pointer;
         }
 
+        /* By default, hide the emojis in the emoji wrapper */
         .emoji-wrapper span {
             display: none;
         }
 
+        /* When the emoji wrapper is shown, display the emojis with some margin */
         .emoji-wrapper.shown span {
             display: inline-block;
             margin: 0 5px;
         }
 
+        /* Styling for the plus sign that users can click to show the emoji reactions */
         .plus-sign {
             cursor: pointer;
             font-size: 20px;
@@ -35,108 +41,113 @@
 </head>
 
 <body>
+    <!-- Main chat container -->
     <div class="container">
+        <!-- Input field for users to type their messages -->
         <input type="text" id="message" />
+        <!-- Button to send the typed message -->
         <input type="button" id="sendmessage" value="Send" />
+        <!-- List to display the chat messages -->
         <ul id="discussion"></ul>
     </div>
+    <!-- Including the SignalR library -->
     <script type="text/javascript" src="lib/signalr.min.js"></script>
     <script type="text/javascript">
-        // Wait for the document to fully load before running the script
+        // Wait for the document to be fully loaded before executing the script
         document.addEventListener('DOMContentLoaded', function () {
+            // Log that the script has started executing
+            console.log("Script loaded and DOMContentLoaded event triggered.");
 
-            // Get the message input box and store it in a variable
+            // Get the message input field and store it in a variable
             var messageInput = document.getElementById('message');
-
             // Prompt the user to enter their name
             var name = prompt('Enter your name:', '');
-
-            // Focus the message input box to make it ready for typing
+            // Focus on the message input field
             messageInput.focus();
 
-            // Initialize a new SignalR connection to the server at the given URL
+            // Create an array to store messages locally
+            var storedMessages = [];
+
+            // Initialize the SignalR connection
             var connection = new signalR.HubConnectionBuilder()
-                .withUrl('/chat')
+                .withUrl('/chat') // Set the URL for the SignalR hub
                 .build();
 
-            // Define how the client should respond when a "broadcastMessage" is received from the server
+            // Listen for the 'broadcastMessage' event from the server
             connection.on('broadcastMessage', function (user, messageText, messageId) {
+                // Log the received message details
+                console.log(`Received broadcastMessage: User=${user}, MessageText=${messageText}, MessageId=${messageId}`);
 
-                // Store the username and the message text received from the server
-                var encodedName = user;
-                var encodedMsg = messageText;
+                // Store the received message in the local array
+                storedMessages.push({ name: user, message: messageText });
 
-                // Create a new list item element to display the message
+                // Create a list item element to display the received message
                 var liElement = document.createElement('li');
-
-                // Set the inner content of the list item element with the username and message text
-                liElement.innerHTML = '<strong>' + encodedName + '</strong>:&nbsp;&nbsp;' + encodedMsg;
-
-                // Store the messageId on the list item for later use
+                liElement.innerHTML = '<strong>' + user + '</strong>:&nbsp;&nbsp;' + messageText;
                 liElement.setAttribute('data-message-id', messageId);
 
-                // Create a new span element for the "+" sign (to show emoji reactions when clicked)
+                // Create a plus sign element to show the emoji reactions
                 var plusSign = document.createElement('span');
                 plusSign.textContent = '+';
                 plusSign.className = 'plus-sign';
 
-                // Create a container for the emoji reactions
+                // Create a wrapper for the emoji reactions
                 var emojiWrapper = document.createElement('div');
                 emojiWrapper.className = 'emoji-wrapper';
 
-                // Define the emoji reactions available
+                // Define the emojis that can be used as reactions
                 var emojis = ['&#128512;', '&#127789;', '&#128578;'];
 
-                // For each emoji, create a clickable element and add event listeners
+                // For each emoji, create a span element and add an event listener
                 emojis.forEach(function (emojiCode) {
                     var emoji = document.createElement('span');
                     emoji.innerHTML = emojiCode;
                     emoji.className = 'emoji-reaction';
 
-                    // When an emoji is clicked, send a reaction to the server
+                    // When an emoji is clicked, invoke the 'AddReaction' method on the server
                     emoji.addEventListener('click', function () {
-                        emojiWrapper.innerHTML = emojiCode;
-                        connection.invoke('AddEmojiCount', name, emojiCode, messageId);
-                        plusSign.style.display = 'none';
+                        connection.invoke('AddReaction', messageId, emoji.innerHTML, name);
+                        plusSign.style.display = 'none'; // Hide the plus sign after selecting an emoji
                     });
-                    emojiWrapper.appendChild(emoji);
+                    emojiWrapper.appendChild(emoji); // Add the emoji to the emoji wrapper
                 });
 
-                // Show emoji reactions when the "+" sign is clicked
+                // When the plus sign is clicked, show the emoji reactions
                 plusSign.addEventListener('click', function () {
                     emojiWrapper.classList.add('shown');
                 });
 
-                // Append the "+" sign and emoji wrapper to the list item
+                // Add the plus sign and emoji wrapper to the list item
                 liElement.appendChild(plusSign);
                 liElement.appendChild(emojiWrapper);
 
-                // Append the list item to the "discussion" list
+                // Add the list item to the chat discussion list
                 document.getElementById('discussion').appendChild(liElement);
             });
 
-            // Define how the client should respond when an "updateReactions" message is received from the server
+            // Listen for the 'updateReactions' event from the server
             connection.on('updateReactions', function (messageId, emoji, count) {
+                // Log the received reaction update details
+                console.log(`Received updateReactions: MessageId=${messageId}, Emoji=${emoji}, Count=${count}`);
 
-                // Find the list item associated with the given messageId
+                // Find the message element that corresponds to the messageId
                 var messageElement = document.querySelector('li[data-message-id="' + messageId + '"]');
-
                 if (!messageElement) return;
 
-                // Find the emoji reaction inside the list item
-                var emojiElement = messageElement.querySelector('span.emoji-reaction:contains("' + emoji + '")');
+                // Find the emoji element within the message that matches the received emoji
+                var emojiElement = Array.from(messageElement.querySelectorAll('span.emoji-reaction')).find(e => e.innerHTML.includes(emoji));
+                console.log(emojiElement.innerHTML);
 
+                // If the emoji element doesn't exist, create it
                 if (!emojiElement) {
-                    // If the emoji reaction doesn't exist yet, create it
                     emojiElement = document.createElement('span');
                     emojiElement.innerHTML = emoji + " " + count;
                     emojiElement.className = 'emoji-reaction';
 
-                    // Append the emoji reaction to the list item
                     var emojiWrapper = messageElement.querySelector('.emoji-wrapper');
                     emojiWrapper.appendChild(emojiElement);
                 } else {
-                    // If the emoji reaction already exists, update its count
+                    // If the emoji element exists, update its count
                     emojiElement.innerHTML = emoji + " " + count;
                 }
             });
@@ -144,21 +155,27 @@
             // Start the SignalR connection
             connection.start()
                 .then(function () {
+                    // Log that the connection has started
                     console.log('connection started');
 
-                    // When the "Send" button is clicked, send the message to the server
+                    // Add an event listener to the send message button
                     document.getElementById('sendmessage').addEventListener('click', function (event) {
+                        // Invoke the 'SendMessage' method on the server when the button is clicked
                         connection.invoke('SendMessage', name, messageInput.value);
+                        // Clear the message input field and refocus on it
                         messageInput.value = '';
                         messageInput.focus();
-                        event.preventDefault();
+                        event.preventDefault(); // Prevent the default form submission behavior
                     });
                 })
                 .catch(error => {
-                    console.error(error.message);
+                    // Log any errors that occur while starting the connection
+                    console.error('Error starting connection:', error.message);
                 });
         });
     </script>
 </body>
 
 </html>
+
+
