--- a/ChatSample/ChatSample/wwwroot/index.html
+++ b/ChatSample/ChatSample/wwwroot/index.html
@@ -15,6 +15,7 @@
     <div class="container">
         <input type="text" id="message" />
         <input type="button" id="sendmessage" value="Send" />
+        <input type="button" id="getHistory" value="Get History" />
         <ul id="discussion"></ul>
     </div>
     <!--Script references. -->
@@ -47,10 +48,26 @@
                 document.getElementById('discussion').appendChild(liElement);
             });
 
+            connection.on('messageHistory', function (history) {
+                // Html encode display name and message.
+                // Add the message to the page.
+                history.forEach((s) => {
+                    var liElement = document.createElement('li');
+                    liElement.innerHTML = '<i>' + s + '</i>';
+                    document.getElementById('discussion').appendChild(liElement);
+                }
+                )
+            });
+            document.getElementById('getHistory').addEventListener('click', function (event) {
+                console.log('getting chat history');
+                connection.invoke('RetreiveMessageHistory', 5);
+                event.preventDefault();
+            });
             // Transport fallback functionality is now built into start.
             connection.start()
                 .then(function () {
                     console.log('connection started');
+                    connection.invoke('RetreiveMessageHistory', 10);
                     document.getElementById('sendmessage').addEventListener('click', function (event) {
                         // Call the Send method on the hub.
                         connection.invoke('send', name, messageInput.value);
